# rompiche

./: .env.example  .gitignore  LICENSE  README.md  brain.py  evaluator.py  example_processor.py  example_processor_design.py  loop.py  main.py  main_optimization.py  main_optimization_cli.py  pyproject.toml  pytest.ini  skill.md  test_output.json  test_processor.py  test_tui_display.py
.vibe/skills/: skill.md
example_data/: example.jsonl
example_input/: example_config.json
output/: test_output.json
rompiche/core/: applier.py  brain.py  evaluator.py  loop.py  main_optimization_cli.py  metrics.py
rompiche/processors/: README.md  __init__.py  ocr_vlm_document_processor.py  text_to_json_processor.py  vlm_document_processor.py
rompiche/tui/: __main__.py  dashboard.py
rompiche/utils/: evaluate_utils.py  processor_utils.py  utils.py
sroie_dataset_experiment/: ONE_SHOT_CLEANING_SUMMARY.md  create_sroie_dataset.py  data_cleaning_changes.json  one_shot_cleaning.py  sroie_config.json
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_processors_integration.py
tests/unit/: test_entrypoints.py
tutorial/: example_processor_design.py
